--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -26,4 +26,11 @@
     <color name="saddlebrown">#8B4513</color>
     <color name="brown">#A52A2A</color>
     <color name="maroon">#800000</color>
+    <color name="yellow">#FFFF00</color>
+    <color name="dark_olive">#9ACD32</color>
+    <color name="light_blue_600">#FF039BE5</color>
+    <color name="light_blue_900">#FF01579B</color>
+    <color name="light_blue_A200">#FF40C4FF</color>
+    <color name="light_blue_A400">#FF00B0FF</color>
+    <color name="black_overlay">#66000000</color>
 </resources>
