--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,6 @@
     android:id="@+id/layoutDrawer"
     tools:context=".MainActivity">
 
-
     <!-- Menu Main Activity -->
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/navigation_view"
@@ -27,7 +26,7 @@
         android:id="@+id/linearMainActivity"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white"
+        android:background="@mipmap/background_compress"
         android:orientation="vertical">
         <RelativeLayout
             android:layout_width="match_parent"
@@ -82,22 +81,15 @@
                     android:textColor="@color/rosybrown"
                     android:fontFamily="monospace"/>
             </LinearLayout>
+
         </RelativeLayout>
 
-        <HorizontalScrollView
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rcViewStore"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:scrollbarStyle="insideInset"
-            android:padding="10dp">
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rcViewStore"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal"/>
-        </HorizontalScrollView>
+            android:layout_margin="15dp"
+            android:orientation="horizontal"/>
 
     </LinearLayout>
     <!--    Home Activity / Dashboard-->
