--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -2,16 +2,20 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_profile"
-            android:title="Account"
-            android:icon="@drawable/ic_profile_blue_foreground"/>
-        <item
             android:id="@+id/nav_home"
             android:title="Home"
             android:icon="@drawable/ic_home_foreground"/>
         <item
+            android:id="@+id/nav_profile"
+            android:title="Account"
+            android:icon="@drawable/ic_profile_blue_foreground"/>
+        <item
             android:id="@+id/nav_settings"
             android:title="Setting"
             android:icon="@drawable/ic_settings_foreground"/>
+        <item
+            android:id="@+id/nav_logout"
+            android:title="Log Out"
+            android:icon="@drawable/ic_logout_foreground"/>
     </group>
 </menu>
