--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,8 +13,36 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+
     <style name="navigationDrawerTheme">
-        <item name="colorPrimary">@color/blue</item>
-        <item name="colorControlHighlight">@color/navy</item>
+        <item name="colorPrimary">@color/brown</item>
+        <item name="colorControlHighlight">@color/yellow</item>
+    </style>
+
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light">
+        <item name="android:colorBackground">@android:color/transparent</item>
+        <item name="android:textColor">#000000</item>
+        <item name="android:background">@drawable/rounded_bg</item>
+    </style>
+
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="ThemeOverlay.MyTheme" parent="ThemeOverlay.AppCompat.Light">
+        <item name="android:colorBackground">@android:color/transparent</item>
+        <item name="android:textColor">#000000</item>
+        <item name="android:background">@drawable/rounded_bg</item>
+    </style>
+
+    <style name="Theme.MyKotlinNotepad.Fullscreen" parent="Theme.MyKotlinNotepad">
+        <item name="android:actionBarStyle">
+            @style/Widget.Theme.MyKotlinNotepad.ActionBar.Fullscreen
+        </item>
+        <item name="android:windowActionBarOverlay">true</item>
+        <item name="android:windowBackground">@null</item>
+    </style>
+
+    <style name="ThemeOverlay.MyKotlinNotepad.FullscreenContainer" parent="">
+        <item name="fullscreenBackgroundColor">@color/light_blue_600</item>
+        <item name="fullscreenTextColor">@color/light_blue_A200</item>
     </style>
 </resources>
