--- a/app/src/main/res/layout/activity_edit_notes.xml
+++ b/app/src/main/res/layout/activity_edit_notes.xml
@@ -36,7 +36,7 @@
         android:ems="10"
         android:textSize="16sp"
         android:gravity="start"
-        android:inputType="textPersonName"
+        android:inputType="textMultiLine"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
