--- a/app/src/main/res/layout/menu_header.xml
+++ b/app/src/main/res/layout/menu_header.xml
@@ -2,51 +2,74 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="200dp"
+    android:layout_height="225dp"
     android:background="@color/white"
     android:paddingLeft="15dp">
 
-    <TextView
-        android:id="@+id/title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/txtSubTitle"
-        android:layout_marginLeft="15dp"
-        android:layout_marginBottom="6dp"
-        android:fontFamily="casual"
-        android:text="Hello,"
-        android:textColor="@color/black"
-        android:textSize="24sp" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="10dp"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/userName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginBottom="6dp"
-        android:layout_toEndOf="@+id/title"
-        android:layout_above="@+id/txtSubTitle"
-        android:fontFamily="casual"
-        android:text="Leony"
-        android:textColor="@color/black"
-        android:textSize="24sp" />
+        <ImageView
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_above="@+id/title"
+            android:layout_marginBottom="12dp"
+            android:layout_marginLeft="15dp"
+            android:src="@drawable/notebook" />
 
-    <TextView
-        android:id="@+id/txtSubTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="10dp"
-        android:layout_marginLeft="15dp"
-        android:text="Sync with your drive to get more space"
-        android:textColor="@color/burlywood"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_above="@+id/txtSubTitle"
+                android:layout_marginLeft="15dp"
+                android:layout_marginBottom="5dp"
+                android:fontFamily="casual"
+                android:text="Hello,"
+                android:textColor="@color/black"
+                android:textSize="24sp" />
 
-    <ImageView
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_above="@+id/title"
-        android:layout_marginBottom="12dp"
-        android:layout_marginLeft="15dp"
-        android:src="@drawable/notebook" />
+            <TextView
+                android:id="@+id/userNames"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginBottom="5dp"
+                android:layout_toEndOf="@+id/title"
+                android:layout_above="@+id/txtSubTitle"
+                android:fontFamily="casual"
+                android:text="Leony"
+                android:textColor="@color/black"
+                android:textSize="24sp" />
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/userEmails"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="15dp"
+            android:textColor="@color/burlywood"/>
+
+        <TextView
+            android:id="@+id/txtSubTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="15dp"
+            android:text="Sync with your drive to get more space"
+            android:textColor="@color/burlywood"/>
+
+    </LinearLayout>
+
 </RelativeLayout>
